--- a/index.html
+++ b/index.html
@@ -18,73 +18,9 @@
             <p>Browse File to Upload</p>
         </form>
 
-        <section class="progress-area">
-            <li class="row">
-                <i class="fas fa-file-alt"></i>
-                <div class="content">
-                    <div class="details">
-                        <span class="name">image-01.png - Uploading</span>
-                        <span class="percent">50%</span>
-                    </div>
-                    <div class="progress-bar">
-                        <div class="progress"></div>
-                    </div>
-                </div>
-            </li>
-        </section>
+        <section class="progress-area"></section>
 
-        <section class="uploaded-area">
-            <li class="row">
-                <div class="content">
-                    <i class="fas fa-file-alt"></i>
-                    <div class="details">
-                        <span class="name">image_01.png - Uploaded</span>
-                        <span class="size">70 KB</span>
-                    </div>
-                </div>
-                <i class="fas fa-check"></i>
-            </li>
-            <li class="row">
-                <div class="content">
-                    <i class="fas fa-file-alt"></i>
-                    <div class="details">
-                        <span class="name">image_01.png - Uploaded</span>
-                        <span class="size">70 KB</span>
-                    </div>
-                </div>
-                <i class="fas fa-check"></i>
-            </li>
-            <li class="row">
-                <div class="content">
-                    <i class="fas fa-file-alt"></i>
-                    <div class="details">
-                        <span class="name">image_01.png - Uploaded</span>
-                        <span class="size">70 KB</span>
-                    </div>
-                </div>
-                <i class="fas fa-check"></i>
-            </li>
-            <li class="row">
-                <div class="content">
-                    <i class="fas fa-file-alt"></i>
-                    <div class="details">
-                        <span class="name">image_01.png - Uploaded</span>
-                        <span class="size">70 KB</span>
-                    </div>
-                </div>
-                <i class="fas fa-check"></i>
-            </li>
-            <li class="row">
-                <div class="content">
-                    <i class="fas fa-file-alt"></i>
-                    <div class="details">
-                        <span class="name">image_01.png - Uploaded</span>
-                        <span class="size">70 KB</span>
-                    </div>
-                </div>
-                <i class="fas fa-check"></i>
-            </li>
-        </section>
+        <section class="uploaded-area"></section>
     </div>
 
     <script src="index.js"></script>
